--- a/_posts/2020-05-20-[Unity]有限状态机FSM.md
+++ b/_posts/2020-05-20-[Unity]有限状态机FSM.md
@@ -1,20 +1,20 @@
----
+ï»¿---
 layout: post
-title: [Unity]ÓĞÏŞ×´Ì¬»úFSM
+title: [Unity]æœ‰é™çŠ¶æ€æœºFSM
 date: 2020-5-20
 categories: blog
 tags:
-description: ¡£
+description: ã€‚
 ---
 
-#¸ÅÄî
-1.ÓĞÏŞ×´Ì¬»ú£º×´Ì¬»úÓÉ×´Ì¬¼Ä´æÆ÷ºÍ×éºÏÂß¼­µçÂ·¹¹³É£¬ÄÜ¹»¸ù¾İ¿ØÖÆĞÅºÅ°´ÕÕÔ¤ÏÈÉè¶¨µÄ×´Ì¬½øĞĞ×´Ì¬×ªÒÆ£¬ÊÇĞ­µ÷Ïà¹ØĞÅºÅ¶¯×÷¡¢Íê³ÉÌØ¶¨²Ù×÷µÄ¿ØÖÆÖĞĞÄ¡£(°Ù¶È¸´ÖÆµÄ£¬¹ş¹ş¹ş)
-2.ÎÒµÄÀí½â¾ÍÊÇÍæÓÎÏ·Ö÷½ÇÓĞ×ß£¬ÅÜ£¬Ìø£¬ËÀÍöµÈµÄ×´Ì¬£¬Í¬Ò»¸öÊ±ºòÖ»ÄÜÓĞÒ»¸ö×´Ì¬£¬µ±Âú×ãÒ»¸öÌØ¶¨µÄÌõ¼ş¾Í»á´ÓÒ»¸ö×´Ì¬±ä³ÉÁíÒ»¸ö×´Ì¬
-![¹ØÏµÍ¼.png](https://upload-images.jianshu.io/upload_images/14959584-5c78467f93b9ee89.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+#æ¦‚å¿µ
+1.æœ‰é™çŠ¶æ€æœºï¼šçŠ¶æ€æœºç”±çŠ¶æ€å¯„å­˜å™¨å’Œç»„åˆé€»è¾‘ç”µè·¯æ„æˆï¼Œèƒ½å¤Ÿæ ¹æ®æ§åˆ¶ä¿¡å·æŒ‰ç…§é¢„å…ˆè®¾å®šçš„çŠ¶æ€è¿›è¡ŒçŠ¶æ€è½¬ç§»ï¼Œæ˜¯åè°ƒç›¸å…³ä¿¡å·åŠ¨ä½œã€å®Œæˆç‰¹å®šæ“ä½œçš„æ§åˆ¶ä¸­å¿ƒã€‚(ç™¾åº¦å¤åˆ¶çš„ï¼Œå“ˆå“ˆå“ˆ)
+2.æˆ‘çš„ç†è§£å°±æ˜¯ç©æ¸¸æˆä¸»è§’æœ‰èµ°ï¼Œè·‘ï¼Œè·³ï¼Œæ­»äº¡ç­‰çš„çŠ¶æ€ï¼ŒåŒä¸€ä¸ªæ—¶å€™åªèƒ½æœ‰ä¸€ä¸ªçŠ¶æ€ï¼Œå½“æ»¡è¶³ä¸€ä¸ªç‰¹å®šçš„æ¡ä»¶å°±ä¼šä»ä¸€ä¸ªçŠ¶æ€å˜æˆå¦ä¸€ä¸ªçŠ¶æ€
+![å…³ç³»å›¾.png](https://upload-images.jianshu.io/upload_images/14959584-5c78467f93b9ee89.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
 
-#Éè¼Æ×´Ì¬»ú
-²»Í¬µÄ×´Ì¬¶¼»áÓĞ½øÈë×´Ì¬£¬¸üĞÂ×´Ì¬£¬Àë¿ª×´Ì¬¼¸¸öĞĞÎª£¬ËùÒÔÎÒÃÇ¶¨ÒåÒ»¸ö³éÏóÀà°ÑÕâĞ©ÌØĞÔÌáÈ¡³öÀ´
+#è®¾è®¡çŠ¶æ€æœº
+ä¸åŒçš„çŠ¶æ€éƒ½ä¼šæœ‰è¿›å…¥çŠ¶æ€ï¼Œæ›´æ–°çŠ¶æ€ï¼Œç¦»å¼€çŠ¶æ€å‡ ä¸ªè¡Œä¸ºï¼Œæ‰€ä»¥æˆ‘ä»¬å®šä¹‰ä¸€ä¸ªæŠ½è±¡ç±»æŠŠè¿™äº›ç‰¹æ€§æå–å‡ºæ¥
 ```
 using System.Collections;
 using System.Collections.Generic;
@@ -23,21 +23,21 @@ using UnityEngine;
 public abstract class BaseState
 {    
     protected FsmManager _fsmManager;
-    //¹¹Ôìº¯Êı
+    //æ„é€ å‡½æ•°
     public BaseState(FsmManager fsmManager)
     {
         _fsmManager = fsmManager;
     }
-    //½øÈë×´Ì¬
+    //è¿›å…¥çŠ¶æ€
     public abstract void EnterState();
-    //Àë¿ª×´Ì¬
+    //ç¦»å¼€çŠ¶æ€
     public abstract void ExitState();
-    //¸üĞÂ×´Ì¬
+    //æ›´æ–°çŠ¶æ€
     public abstract void UpdateState();
     
 }
 ```
-È»ºóÎÒÃÇĞèÒªÒ»¸ö×´Ì¬¹ÜÀíµÄÀàÀ´¹ÜÀí£¬×´Ì¬µÄ×¢²á£¬Á½¸ö×´Ì¬µÄ×ª»»£¬ÉèÖÃÄ¬ÈÏ×´Ì¬ºÍ¸üĞÂ×´Ì¬
+ç„¶åæˆ‘ä»¬éœ€è¦ä¸€ä¸ªçŠ¶æ€ç®¡ç†çš„ç±»æ¥ç®¡ç†ï¼ŒçŠ¶æ€çš„æ³¨å†Œï¼Œä¸¤ä¸ªçŠ¶æ€çš„è½¬æ¢ï¼Œè®¾ç½®é»˜è®¤çŠ¶æ€å’Œæ›´æ–°çŠ¶æ€
 ```
 using System.Collections;
 using System.Collections.Generic;
@@ -45,10 +45,10 @@ using UnityEngine;
 
 public class FsmManager
 {
-    private BaseState currentState;//µ±Ç°×´Ì¬
-    private Dictionary<string, BaseState> playerStateDic = new Dictionary<string, BaseState>();//´¢´æ×´Ì¬µÄ×Öµä
+    private BaseState currentState;//å½“å‰çŠ¶æ€
+    private Dictionary<string, BaseState> playerStateDic = new Dictionary<string, BaseState>();//å‚¨å­˜çŠ¶æ€çš„å­—å…¸
     public FsmManager() { }
-    //×´Ì¬×¢²á
+    //çŠ¶æ€æ³¨å†Œ
     public void Region(string statename, BaseState state)
     {
         if (!playerStateDic.ContainsKey(statename))
@@ -56,7 +56,7 @@ public class FsmManager
             playerStateDic.Add(statename, state);
         }
     }
-    //ÉèÖÃÄ¬ÈÏ×´Ì¬
+    //è®¾ç½®é»˜è®¤çŠ¶æ€
     public void SetDefaultState(string statename)
     {
         if (playerStateDic.ContainsKey(statename))
@@ -65,7 +65,7 @@ public class FsmManager
             currentState.EnterState();
         }
     }
-    //¸Ä±ä×´Ì¬
+    //æ”¹å˜çŠ¶æ€
     public void ChangeState(string statename)
     {
         if (playerStateDic.ContainsKey(statename))
@@ -82,7 +82,7 @@ public class FsmManager
             }
         }
     }
-   //¸üĞÂ×´Ì¬
+   //æ›´æ–°çŠ¶æ€
     public void UpdateState()
     {
         if (currentState != null)
@@ -92,7 +92,7 @@ public class FsmManager
     }
 }
 ```
-ÔÙ±àĞ´²»Í¬×´Ì¬µÄÀà£¬ÀıÈç×ßµÄ×´Ì¬
+å†ç¼–å†™ä¸åŒçŠ¶æ€çš„ç±»ï¼Œä¾‹å¦‚èµ°çš„çŠ¶æ€
 ```
 using System.Collections;
 using System.Collections.Generic;
@@ -111,15 +111,15 @@ public class PlayerWalkState : BaseState
 
     public override void UpdateState()
     {
-       //ÀıÈçµ±Âú×ãÌõ¼şAµÄÊ±ºò×´Ì¬´Ó×ß±ä³ÉÅÜ
+       //ä¾‹å¦‚å½“æ»¡è¶³æ¡ä»¶Açš„æ—¶å€™çŠ¶æ€ä»èµ°å˜æˆè·‘
        if (A){
                     _fsmManager.ChangeState("run");
        }
     }
 }
 ```
-ºóĞøÆäËû×´Ì¬Ôö¼ÓÏàÓ¦µÄÀà¾ÍºÃÁË
-#²âÊÔ
+åç»­å…¶ä»–çŠ¶æ€å¢åŠ ç›¸åº”çš„ç±»å°±å¥½äº†
+#æµ‹è¯•
 ```
 using System.Collections;
 using System.Collections.Generic;
@@ -134,18 +134,18 @@ public class FSM: MonoBehaviour
     {     
        
         fsmManager = new FsmManager();
-        //×¢²á×´Ì¬
+        //æ³¨å†ŒçŠ¶æ€
         fsmManager.Region("walk", new PlayerWalkState(fsmManager, playerAnim));
         fsmManager.Region("run", new PlayerRunState(fsmManager, playerAnim));
         fsmManager.Region("jump", new PlayerJumpState(fsmManager, playerAnim));
-        //ÉèÖÃÄ¬ÈÏ×´Ì¬
+        //è®¾ç½®é»˜è®¤çŠ¶æ€
         fsmManager.SetDefaultState("walk");
     }
 
     // Update is called once per frame
     void Update()
     {
-        //¸üĞÂ×´Ì¬
+        //æ›´æ–°çŠ¶æ€
         fsmManager.UpdateState();
     } 
 }
